force-app/main/default/objects/nFUSE__Map_Item__mdt/nFUSE__Map_Item__mdt.object-meta.xml
<CustomObject>
    <description>This object maps fields from a REST request to Salesforce fields.</description>
    <label>Map Item</label>
    <pluralLabel>Map Items</pluralLabel>
</CustomObject>