force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__App_Plugin_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__App_Plugin_Type__c</fullName>
    <description>Name of the nCino productized integration for which the custom mapping should be used</description>
    <label>App Plugin Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>