force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__From_Field__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__From_Field__c</fullName>
    <description>The source field name from which to extract the value</description>
    <label>From Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>