force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the customMapping item will be used to map a value. When false, the value will be ignored in the source</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>