force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__Plugin_Name__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Plugin_Name__c</fullName>
    <description>Name of the plugin for which this custom mapping should apply. If left blank, custom mapping will apply to all plugins of productized integration in scope</description>
    <label>Plugin Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>