force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__Process_Context__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Process_Context__c</fullName>
    <description>Context to which this custom mapping item should apply</description>
    <label>Process Context</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>