force-app/main/default/objects/nFUSE__Map_Item__mdt/fields/nFUSE__To_Field__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__To_Field__c</fullName>
    <description>The field into which to place the value mapped from the source field</description>
    <label>To Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>